# claude-session-manager

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.session-manager  Dockerfile.session-manager.ci  PLAN.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: jcttech.analyze.md  jcttech.architecture.md  jcttech.bug.md  jcttech.checklist.md  jcttech.clarify.md  jcttech.createissue.md  jcttech.decision.md  jcttech.epic.md  jcttech.idea.md  jcttech.implement.md  jcttech.plan.md  jcttech.push.md  jcttech.setup-project.md  jcttech.specify.md  jcttech.sync.md  jcttech.triage.md
.devcontainer/: CLAUDE.md  devcontainer.json
.docs/: architecture.excalidraw  architecture.md
.github/workflows/: CLAUDE.md  build-agent-worker.yml  build-session-manager.yml  build.yml  claude-review.yml  cleanup.yml  release-agent-worker.yml  release-session-manager.yml
.specflow/: blueprint.md  config.yml
.specify/: config.yml  project-fields.yml
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  lib.rs  rate_limit.rs
crates/graph-client/: Cargo.toml
crates/graph-client/src/: lib.rs
crates/mail-bridge/: Cargo.toml
crates/mail-bridge/src/: main.rs
crates/mattermost-client/: Cargo.toml
crates/mattermost-client/src/: lib.rs
crates/session-manager/: Cargo.toml  build.rs
crates/session-manager/src/: admin.rs  config.rs  container.rs  container_registry.rs  database.rs  devcontainer.rs  git.rs  grpc.rs  idle_monitor.rs  lib.rs  liveness.rs  main.rs  opnsense.rs  orchestrator_prompt.rs  profile.rs  ssh.rs  stream_json.rs
crates/session-manager/src/templates/: orchestrator_default.md
crates/session-manager/tests/: database_tests.rs  integration_tests.rs
proto/: agent.proto
sql/: CLAUDE.md  init.sql
src/: CLAUDE.md  config.rs  container.rs  crypto.rs  database.rs  git.rs  lib.rs  main.rs  mattermost.rs  opnsense.rs  rate_limit.rs  ssh.rs
tests/: CLAUDE.md  database_tests.rs  integration_tests.rs
