[package]
name = "session-manager"
version = "0.1.0"
edition = "2024"

[lib]
name = "session_manager"
path = "src/lib.rs"

[[bin]]
name = "session-manager"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
config = "0.15"

# Security additions
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
shell-escape = "0.1"
tower = { version = "0.5", features = ["limit"] }

# State persistence
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Observability
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
