[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "2.5.2"

[workspace.dependencies]
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7.18"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-native-roots",
] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tracing = "0.1.44"
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
axum = { version = "0.8.9", features = ["macros"] }
dashmap = "6.1.0"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
tower = { version = "0.5.3", features = ["limit"] }
