[package]
name = "mattermost-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
