[package]
name = "mattermost-client"
version.workspace = true
edition = "2024"

[dependencies]
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = "0.1"
